--- a/gui/lyve_config_common.ui
+++ b/gui/lyve_config_common.ui
@@ -15,7 +15,7 @@
   </property>
   <layout class="QGridLayout" name="gridLayout">
    <item row="10" column="0">
-    <widget class="QToolButton" name="advanced_settings">
+    <widget class="QToolButton" name="button_advancedSettings">
      <property name="maximumSize">
       <size>
        <width>150</width>
@@ -28,7 +28,7 @@
     </widget>
    </item>
    <item row="10" column="1">
-    <widget class="QPushButton" name="okay_button">
+    <widget class="QPushButton" name="button_okay">
      <property name="maximumSize">
       <size>
        <width>100</width>
@@ -59,10 +59,10 @@
          </widget>
         </item>
         <item>
-         <widget class="QLineEdit" name="fileCache_path_input"/>
+         <widget class="QLineEdit" name="lineEdit_fileCache_path"/>
         </item>
         <item>
-         <widget class="QPushButton" name="browse_button">
+         <widget class="QPushButton" name="button_browse">
           <property name="text">
            <string>Browse</string>
           </property>
@@ -74,7 +74,7 @@
     </widget>
    </item>
    <item row="7" column="0">
-    <widget class="QPushButton" name="resetDefautSettings">
+    <widget class="QPushButton" name="button_resetDefaultSettings">
      <property name="enabled">
       <bool>true</bool>
      </property>
@@ -139,7 +139,7 @@
      <item>
       <layout class="QVBoxLayout" name="verticalLayout_2">
        <item>
-        <widget class="QLineEdit" name="libfuse_attExp_input">
+        <widget class="QLineEdit" name="lineEdit_libfuse_attExp">
          <property name="maximumSize">
           <size>
            <width>30</width>
@@ -152,7 +152,7 @@
         </widget>
        </item>
        <item>
-        <widget class="QLineEdit" name="libfuse_entExp_input">
+        <widget class="QLineEdit" name="lineEdit_libfuse_entExp">
          <property name="maximumSize">
           <size>
            <width>30</width>
@@ -165,7 +165,7 @@
         </widget>
        </item>
        <item>
-        <widget class="QLineEdit" name="libfuse_negEntryExp_input">
+        <widget class="QLineEdit" name="lineEdit_libfuse_negEntryExp">
          <property name="maximumSize">
           <size>
            <width>30</width>
@@ -178,7 +178,7 @@
         </widget>
        </item>
        <item>
-        <widget class="QComboBox" name="libfuse_permissions_select">
+        <widget class="QComboBox" name="dropDown_libfuse_permissions">
          <property name="toolTip">
           <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;Default permissions to be presented for block blobs&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
          </property>
@@ -205,7 +205,7 @@
         </widget>
        </item>
        <item>
-        <widget class="QComboBox" name="pipeline_select">
+        <widget class="QComboBox" name="dropdown_pipeline">
          <property name="toolTip">
           <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;Set up the pipeline for LyveFuse. &lt;/p&gt;&lt;p&gt;Choose streaming or file caching&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
          </property>
@@ -234,7 +234,7 @@
       <enum>QLayout::SetMinimumSize</enum>
      </property>
      <item>
-      <widget class="QCheckBox" name="commonConfig_multiuser_checkbox">
+      <widget class="QCheckBox" name="checkbox_multiUser">
        <property name="toolTip">
         <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;Select to allow multiple users to access the container&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
        </property>
@@ -247,28 +247,28 @@
       </widget>
      </item>
      <item>
-      <widget class="QCheckBox" name="commonConfig_nonEmptyDir_checkbox">
+      <widget class="QCheckBox" name="checkbox_nonEmptyDir">
        <property name="text">
         <string>Non-empty directory mount</string>
        </property>
       </widget>
      </item>
      <item>
-      <widget class="QCheckBox" name="commonConfig_readOnly_checkbox">
+      <widget class="QCheckBox" name="checkbox_readOnly">
        <property name="text">
         <string>Read-only mount</string>
        </property>
       </widget>
      </item>
      <item>
-      <widget class="QCheckBox" name="daemonForeground_checkbox">
+      <widget class="QCheckBox" name="checkbox_daemonForeground">
        <property name="text">
         <string>Run in foreground</string>
        </property>
       </widget>
      </item>
      <item>
-      <widget class="QCheckBox" name="libfuse_ignoreAppend_checkbox">
+      <widget class="QCheckBox" name="checkbox_libfuse_ignoreAppend">
        <property name="text">
         <string>Ignore append/write only flags</string>
        </property>
@@ -322,7 +322,7 @@
         <item>
          <layout class="QVBoxLayout" name="verticalLayout_5">
           <item>
-           <widget class="QComboBox" name="streaming_fileCachingLevel_select">
+           <widget class="QComboBox" name="dropDown_streaming_fileCachingLevel">
             <item>
              <property name="text">
               <string>Handle level</string>
@@ -336,7 +336,7 @@
            </widget>
           </item>
           <item>
-           <widget class="QLineEdit" name="streaming_blksz_input">
+           <widget class="QLineEdit" name="lineEdit_streaming_blockSize">
             <property name="maximumSize">
              <size>
               <width>75</width>
@@ -352,7 +352,7 @@
            </widget>
           </item>
           <item>
-           <widget class="QLineEdit" name="streaming_mxbuff_input">
+           <widget class="QLineEdit" name="lineEdit_streaming_maxBuff">
             <property name="maximumSize">
              <size>
               <width>75</width>
@@ -368,7 +368,7 @@
            </widget>
           </item>
           <item>
-           <widget class="QLineEdit" name="streaming_buffsz_input">
+           <widget class="QLineEdit" name="lineEdit_streaming_buffSize">
             <property name="maximumSize">
              <size>
               <width>75</width>
@@ -427,16 +427,16 @@
      <item>
       <layout class="QVBoxLayout" name="verticalLayout_6">
        <item>
-        <widget class="QLineEdit" name="bucket_name_input"/>
+        <widget class="QLineEdit" name="lineEdit_bucketName"/>
        </item>
        <item>
-        <widget class="QLineEdit" name="access_key_input"/>
+        <widget class="QLineEdit" name="lineEdit_accessKey"/>
        </item>
        <item>
-        <widget class="QLineEdit" name="secret_key_input"/>
+        <widget class="QLineEdit" name="lineEdit_secretKey"/>
        </item>
        <item>
-        <widget class="QLineEdit" name="endpoint_input"/>
+        <widget class="QLineEdit" name="lineEdit_endpoint"/>
        </item>
       </layout>
      </item>
