--- a/gui/lyve_config_advanced.ui
+++ b/gui/lyve_config_advanced.ui
@@ -15,14 +15,14 @@
   </property>
   <layout class="QGridLayout" name="gridLayout">
    <item row="2" column="0">
-    <widget class="QCheckBox" name="libfuse_disableWriteback_checkbox">
+    <widget class="QCheckBox" name="checkbox_libfuse_disableWriteback">
      <property name="text">
       <string>Disable write-back cache</string>
      </property>
     </widget>
    </item>
    <item row="4" column="0">
-    <widget class="QPushButton" name="resetDefautSettings">
+    <widget class="QPushButton" name="button_resetDefaultSettings">
      <property name="enabled">
       <bool>true</bool>
      </property>
@@ -44,7 +44,7 @@
     </widget>
    </item>
    <item row="4" column="1">
-    <widget class="QPushButton" name="okay_button">
+    <widget class="QPushButton" name="button_okay">
      <property name="maximumSize">
       <size>
        <width>100</width>
@@ -60,7 +60,7 @@
     </widget>
    </item>
    <item row="1" column="0" colspan="2">
-    <widget class="QGroupBox" name="filecache_groupbox">
+    <widget class="QGroupBox" name="groupbox_fileCache">
      <property name="title">
       <string>File Caching</string>
      </property>
@@ -68,35 +68,35 @@
       <item row="0" column="0">
        <layout class="QVBoxLayout" name="verticalLayout_9">
         <item>
-         <widget class="QCheckBox" name="fileCache_allowNonEmptyTmp_checkbox">
+         <widget class="QCheckBox" name="checkbox_fileCache_allowNonEmptyTmp">
           <property name="text">
            <string>Allow non-empty temp</string>
           </property>
          </widget>
         </item>
         <item>
-         <widget class="QCheckBox" name="fileCache_policyLogs_checkbox">
+         <widget class="QCheckBox" name="checkbox_fileCache_policyLogs">
           <property name="text">
            <string>Policy logs</string>
           </property>
          </widget>
         </item>
         <item>
-         <widget class="QCheckBox" name="fileCache_createEmptyFile_checkbox">
+         <widget class="QCheckBox" name="checkbox_fileCache_createEmptyFile">
           <property name="text">
            <string>Create empty file</string>
           </property>
          </widget>
         </item>
         <item>
-         <widget class="QCheckBox" name="fileCache_cleanupStart_checkbox">
+         <widget class="QCheckBox" name="checkbox_fileCache_cleanupStart">
           <property name="text">
            <string>Cleanup on start</string>
           </property>
          </widget>
         </item>
         <item>
-         <widget class="QCheckBox" name="fileCache_offloadIO_checkbox">
+         <widget class="QCheckBox" name="checkbox_fileCache_offloadIO">
           <property name="text">
            <string>Offload io</string>
           </property>
@@ -155,7 +155,7 @@
         <item>
          <layout class="QVBoxLayout" name="verticalLayout_7">
           <item>
-           <widget class="QComboBox" name="fileCache_evictionPolicy_select">
+           <widget class="QComboBox" name="dropDown_fileCache_evictionPolicy">
             <item>
              <property name="text">
               <string>lru - least recently used</string>
@@ -169,7 +169,7 @@
            </widget>
           </item>
           <item>
-           <widget class="QLineEdit" name="fileCache_timeout_input">
+           <widget class="QLineEdit" name="checkbox_fileCache_timeout">
             <property name="maximumSize">
              <size>
               <width>30</width>
@@ -185,7 +185,7 @@
            </widget>
           </item>
           <item>
-           <widget class="QLineEdit" name="fileCache_maxEviction_input">
+           <widget class="QLineEdit" name="checkbox_fileCache_maxEviction">
             <property name="maximumSize">
              <size>
               <width>75</width>
@@ -201,7 +201,7 @@
            </widget>
           </item>
           <item>
-           <widget class="QLineEdit" name="fileCache_maxCacheSize_input">
+           <widget class="QLineEdit" name="checkbox_fileCache_maxCacheSize">
             <property name="maximumSize">
              <size>
               <width>75</width>
@@ -220,7 +220,7 @@
            </widget>
           </item>
           <item>
-           <widget class="QLineEdit" name="fileCache_evictMaxThresh_input">
+           <widget class="QLineEdit" name="checkbox_fileCache_evictMaxThresh">
             <property name="maximumSize">
              <size>
               <width>30</width>
@@ -236,7 +236,7 @@
            </widget>
           </item>
           <item>
-           <widget class="QLineEdit" name="fileCache_evictMinThresh_input">
+           <widget class="QLineEdit" name="checkbox_fileCache_evictMinThresh">
             <property name="maximumSize">
              <size>
               <width>30</width>
