--- a/gui/lyve_config_common.ui
+++ b/gui/lyve_config_common.ui
@@ -44,7 +44,7 @@
     </widget>
    </item>
    <item row="6" column="0" colspan="2">
-    <widget class="QGroupBox" name="filecache_groupbox">
+    <widget class="QGroupBox" name="groupbox_fileCache">
      <property name="title">
       <string/>
      </property>
@@ -205,7 +205,7 @@
         </widget>
        </item>
        <item>
-        <widget class="QComboBox" name="dropdown_pipeline">
+        <widget class="QComboBox" name="dropDown_pipeline">
          <property name="toolTip">
           <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;Set up the pipeline for LyveFuse. &lt;/p&gt;&lt;p&gt;Choose streaming or file caching&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
          </property>
@@ -280,7 +280,7 @@
     </layout>
    </item>
    <item row="6" column="0" colspan="2">
-    <widget class="QGroupBox" name="streaming_groupbox">
+    <widget class="QGroupBox" name="groupbox_streaming">
      <property name="title">
       <string/>
      </property>
